--- a/index.html
+++ b/index.html
@@ -43,27 +43,17 @@
     <section id="home" class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <span class="hero-greeting">Hello, I'm Meira</span>
                 <h1 class="hero-title">
-                    Web & UX Designer
-                    <span class="title-accent">Creating Beautiful, Functional Digital Experiences</span>
+                    HELLO, I'M MEIRA
+                    <span class="title-accent">I create beautiful, functional<br> digital&nbsp;experiences</span>
                 </h1>
-                <p class="hero-description">
-                    I work with nonprofits, small businesses, artists, educators, and changemakers to create websites and digital experiences that look amazing, work great, and make a real impact. I value collaboration, creativity, and user-centered design.
-                </p>
+
                 <div class="hero-cta">
                     <a href="work.html" class="btn btn-primary">View My Work</a>
                     <a href="contact.html" class="btn btn-secondary">Let's Talk</a>
                 </div>
             </div>
-            <div class="hero-visual">
-                <div class="hero-image-container">
-                    <div class="hero-logo-text">
-                        <span class="hero-logo-name">Meira Tompkins</span>
-                        <span class="hero-logo-subtitle">Web & UX Designer</span>
-                    </div>
-                </div>
-            </div>
+
         </div>
         
         <!-- Scroll indicator -->
