Enhance overall site aesthetics and animations: implemented glass morphism effects across hero sections, added fade-in animations for text elements, and centered section titles for improved visual hierarchy. Refactored CSS for better responsiveness and removed outdated styles from contact and services pages. Updated JavaScript to support new scroll animations and indicators for a smoother user experience.

--- a/contact.html
+++ b/contact.html
@@ -44,11 +44,13 @@
     <section class="contact-hero">
         <div class="container">
             <div class="contact-hero-content">
-                <span class="section-label">Get In Touch</span>
-                <h1 class="page-title">Let's Create Something Amazing Together</h1>
-                <p class="contact-hero-description">
-                    Ready to bring your vision to life? I'd love to hear about your project and discuss how we can create an exceptional digital experience for your users.
-                </p>
+                <div class="hero-text">
+                    <span class="hero-greeting fade-in-up">Get In Touch</span>
+                    <h1 class="hero-title fade-in-up delay-100">
+                        Let's Create Something<br>Amazing Together
+                        <span class="title-accent fade-in-up delay-200">ready to bring your vision to life</span>
+                    </h1>
+                </div>
             </div>
         </div>
     </section>
