--- a/services.html
+++ b/services.html
@@ -45,11 +45,13 @@
     <section class="services-hero">
         <div class="container">
             <div class="services-hero-content">
-                <span class="hero-label">Services & Pricing</span>
-                <h1 class="services-title">Let's Build Something Beautiful Together</h1>
-                <p class="services-description">
-                    Transparent pricing for web design, development, and digital design services. From complete website builds to brand identity packages, I work with nonprofits, small businesses, artists, and changemakers to create meaningful digital experiences.
-                </p>
+                <div class="hero-text">
+                    <span class="hero-greeting fade-in-up">Services & Pricing</span>
+                    <h1 class="hero-title fade-in-up delay-100">
+                        Let's Build Something<br>Beautiful Together
+                        <span class="title-accent fade-in-up delay-200">transparent pricing for meaningful digital experiences</span>
+                    </h1>
+                </div>
             </div>
         </div>
     </section>
