Refactor About, Contact, and Services pages: updated navigation links and section IDs for consistency. Enhanced content and styles for better user engagement, including new quick contact cards and improved call-to-action sections. Adjusted CSS for responsiveness and visual appeal, ensuring a cohesive design across the site.

--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
                     <span class="hero-greeting fade-in-up">Services & Pricing</span>
                     <h1 class="hero-title fade-in-up delay-100">
                         Let's Build Something<br>Beautiful Together
-                        <span class="title-accent fade-in-up delay-200">transparent pricing for meaningful digital experiences</span>
+                        <span class="title-accent fade-in-up delay-200">transparent pricing for<br>meaningful digital experiences</span>
                     </h1>
                 </div>
             </div>
@@ -523,17 +523,17 @@
         </div>
     </section>
 
-    <!-- CTA Section -->
-    <section class="services-cta">
+    <!-- Contact CTA -->
+    <section class="contact-cta">
         <div class="container">
             <div class="cta-content">
-                <h2 class="cta-title">Ready to Start Your Project?</h2>
-                <p class="cta-description">
-                    Let's have a conversation about your goals and how I can help bring your vision to life. Every great project starts with understanding your unique needs.
+                <h2 class="cta-title fade-in-up">Let's Create Something&nbsp;Amazing&nbsp;Together</h2>
+                <p class="cta-description fade-in-up delay-100">
+                    Ready to bring your vision to life? I'd love to hear about your project and discuss how we can create an exceptional experience for your&nbsp;users.
                 </p>
                 <div class="cta-buttons">
-                    <a href="contact.html" class="btn btn-primary">Get In Touch</a>
-                    <a href="work.html" class="btn btn-secondary">View My Work</a>
+                    <a href="contact.html" class="btn btn-primary fade-in-up delay-200">Start a Project</a>
+                    <a href="mailto:hello@meiratompkins.com" class="btn btn-secondary fade-in-up delay-300">Send Email</a>
                 </div>
             </div>
         </div>
