--- a/work.html
+++ b/work.html
@@ -115,12 +115,12 @@
                 <!-- Peggy Reid Ogden -->
                 <article class="portfolio-item" data-category="web-design ux-research">
                     <div class="portfolio-image">
-                        <div class="image-placeholder" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);"></div>
+                        <img src="156.jpg" alt="Peggy Reid Ogden artwork portfolio" class="portfolio-project-image">
                         <div class="portfolio-overlay">
                             <div class="overlay-content">
                                 <span class="project-type">Artist Portfolio Design</span>
                                 <h3 class="project-title">Peggy Reid Ogden Artwork</h3>
-                                <p class="project-summary">Gallery-focused experience designed for art collectors and enthusiasts</p>
+                                <p class="project-summary">Exceptionally crafted, cozy, and whimsical website featuring artwork and life story</p>
                                 <a href="case-study-peggy-reid.html" class="project-link">View Case Study</a>
                             </div>
                         </div>
@@ -132,35 +132,35 @@
                         </div>
                         <h3 class="project-title">Peggy Reid Ogden Artwork</h3>
                         <p class="project-description">
-                            Creating a sophisticated digital gallery experience that honors artistic legacy while engaging modern collectors. Focused on emotional connection and artwork presentation.
+                            An exceptionally crafted, cozy, and whimsical website featuring Peggy's artwork and life story, incorporating flat artwork, 3D objects, and polaroid images to create a narrative-driven experience.
                         </p>
                         <div class="project-tags">
-                            <span class="tag">Gallery Design</span>
-                            <span class="tag">Art Portfolio</span>
-                            <span class="tag">Collector Experience</span>
+                            <span class="tag">WordPress</span>
+                            <span class="tag">Custom Design</span>
+                            <span class="tag">Artist Portfolio</span>
                         </div>
                         <div class="project-results">
                             <div class="result">
-                                <span class="result-value">250%</span>
-                                <span class="result-label">More inquiries</span>
+                                <span class="result-value">10+</span>
+                                <span class="result-label">Custom Pages</span>
                             </div>
                             <div class="result">
-                                <span class="result-value">12</span>
-                                <span class="result-label">Sales in Q1</span>
+                                <span class="result-value">WCAG</span>
+                                <span class="result-label">Compliant</span>
                             </div>
                         </div>
                     </div>
                 </article>
 
                 <!-- CarePac Design -->
-                <article class="portfolio-item" data-category="freelance packaging ux-research">
+                <article class="portfolio-item" data-category="freelance web-design">
                     <div class="portfolio-image">
-                        <div class="image-placeholder" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);"></div>
+                        <img src="Carepac_Pages.jpg" alt="CarePac Design Solutions product page redesign" class="portfolio-project-image">
                         <div class="portfolio-overlay">
                             <div class="overlay-content">
-                                <span class="project-type">Packaging Design</span>
+                                <span class="project-type">Web Design</span>
                                 <h3 class="project-title">CarePac Design Solutions</h3>
-                                <p class="project-summary">User-centered packaging design for multiple product lines</p>
+                                <p class="project-summary">Visual design transformation for product pages</p>
                                 <a href="case-study-carepac.html" class="project-link">View Case Study</a>
                             </div>
                         </div>
@@ -168,25 +168,25 @@
                     <div class="portfolio-content">
                         <div class="project-meta">
                             <span class="project-category">Freelance</span>
-                            <span class="project-year">2023-2024</span>
+                            <span class="project-year">2024-Current</span>
                         </div>
                         <h3 class="project-title">CarePac Design Solutions</h3>
                         <p class="project-description">
-                            Freelance packaging design work creating innovative, functional solutions for pouch tear notches, hang hole bags, and coffee packaging through extensive user research and testing.
+                            Redesigned key product pages including Hang Hole Bags, Pouch Tear Notch, and Side Gusset Pouches to transform text-heavy layouts into visually compelling experiences using high-quality product mockups and visual storytelling.
                         </p>
                         <div class="project-tags">
-                            <span class="tag">User Research</span>
-                            <span class="tag">Physical Product</span>
-                            <span class="tag">Prototyping</span>
+                            <span class="tag">Adobe XD</span>
+                            <span class="tag">Visual Design</span>
+                            <span class="tag">Product Pages</span>
                         </div>
                         <div class="project-results">
                             <div class="result">
-                                <span class="result-value">40%</span>
-                                <span class="result-label">Easier opening</span>
+                                <span class="result-value">3</span>
+                                <span class="result-label">Key Pages Redesigned</span>
                             </div>
                             <div class="result">
-                                <span class="result-value">85%</span>
-                                <span class="result-label">User satisfaction</span>
+                                <span class="result-value">Visual</span>
+                                <span class="result-label">Design Focus</span>
                             </div>
                         </div>
                     </div>
@@ -340,17 +340,17 @@
         </div>
     </section>
 
-    <!-- Call to Action -->
-    <section class="work-cta">
+    <!-- Contact CTA -->
+    <section class="contact-cta">
         <div class="container">
             <div class="cta-content">
-                <h2 class="cta-title">Ready to Work Together?</h2>
-                <p class="cta-description">
-                    I'm currently seeking mid-level UX design roles and taking on select freelance projects. Let's discuss how I can help bring your vision to life.
+                <h2 class="cta-title fade-in-up">Let's Create Something&nbsp;Amazing&nbsp;Together</h2>
+                <p class="cta-description fade-in-up delay-100">
+                    Ready to bring your vision to life? I'd love to hear about your project and discuss how we can create an exceptional experience for your&nbsp;users.
                 </p>
                 <div class="cta-buttons">
-                    <a href="contact.html" class="btn btn-primary">Start a Conversation</a>
-                    <a href="about.html" class="btn btn-secondary">Learn More About Me</a>
+                    <a href="contact.html" class="btn btn-primary fade-in-up delay-200">Start a Project</a>
+                    <a href="mailto:hello@meiratompkins.com" class="btn btn-secondary fade-in-up delay-300">Send Email</a>
                 </div>
             </div>
         </div>
