Update Growth Ladder case study visuals and project details: revised logo subtitle for clarity, replaced outdated mockups with new images, and enhanced project description to better reflect the scope and features of the freelance project. Adjusted metrics to accurately represent project outcomes.

--- a/work.html
+++ b/work.html
@@ -195,7 +195,7 @@
                 <!-- Growth Ladder Group -->
                 <article class="portfolio-item" data-category="web-design freelance">
                     <div class="portfolio-image">
-                        <div class="image-placeholder" style="background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);"></div>
+                        <img src="Growth_Ladder_Pages.jpg" alt="Growth Ladder Group website showing professional business consulting design" class="portfolio-project-image">
                         <div class="portfolio-overlay">
                             <div class="overlay-content">
                                 <span class="project-type">Wix Development</span>
@@ -212,7 +212,7 @@
                         </div>
                         <h3 class="project-title">Growth Ladder Group</h3>
                         <p class="project-description">
-                            Creating a professional business consulting platform using Wix that establishes credibility, showcases expertise, and converts prospects into clients with strategic UX design.
+                            A freelance project creating a professional business consulting platform using Wix. Built two main pages (home and services) with integrated payment plan functionality for coaching programs, using logo colors to create a modern and user-friendly site.
                         </p>
                         <div class="project-tags">
                             <span class="tag">Wix Platform</span>
@@ -221,12 +221,12 @@
                         </div>
                         <div class="project-results">
                             <div class="result">
-                                <span class="result-value">180%</span>
-                                <span class="result-label">More consultations</span>
+                                <span class="result-value">2</span>
+                                <span class="result-label">Main pages created</span>
                             </div>
                             <div class="result">
-                                <span class="result-value">32%</span>
-                                <span class="result-label">Form completion</span>
+                                <span class="result-value">Payment</span>
+                                <span class="result-label">Plan integration</span>
                             </div>
                         </div>
                     </div>
