Update project details and visuals across multiple case studies: replaced outdated project descriptions and images for EVERNET Consulting, CarePac Design Solutions, and Growth Ladder Group. Enhanced CSS for project images and added new social media and brand design projects, improving overall portfolio presentation and user engagement.

--- a/index.html
+++ b/index.html
@@ -79,37 +79,37 @@
             <div class="work-grid">
                 <article class="work-card fade-in-up delay-300" data-category="web-design">
                     <div class="work-image">
-                        <div class="image-placeholder" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
+                        <div class="image-placeholder" style="background: linear-gradient(135deg, #1e40af 0%, #3b82f6 100%);"></div>
                         <div class="work-overlay">
-                            <span class="work-type">Web Design & Development</span>
+                            <span class="work-type">WordPress Design & Development</span>
                         </div>
                     </div>
                     <div class="work-content">
-                        <h3 class="work-title">Red Yes Studio</h3>
-                        <p class="work-description">Complete brand identity and website redesign focusing on user engagement and conversion optimization.</p>
+                        <h3 class="work-title">EVERNET Consulting</h3>
+                        <p class="work-description">Complete WordPress website design and development for IT and marketing services company with modern homepage and comprehensive pricing pages.</p>
                         <div class="work-tags">
-                            <span class="tag">UX Design</span>
-                            <span class="tag">Branding</span>
-                            <span class="tag">Web Development</span>
+                            <span class="tag">WordPress</span>
+                            <span class="tag">Web Design</span>
+                            <span class="tag">Pricing Pages</span>
                         </div>
-                        <a href="case-study-red-yes.html" class="work-link">View Case Study →</a>
+                        <a href="case-study-evernet.html" class="work-link">View Case Study →</a>
                     </div>
                 </article>
 
                 <article class="work-card fade-in-up delay-400" data-category="freelance">
                     <div class="work-image">
-                        <div class="image-placeholder" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);"></div>
+                        <img src="Carepac_Pages.jpg" alt="CarePac Design Solutions product page redesign" class="work-project-image">
                         <div class="work-overlay">
-                            <span class="work-type">Packaging Design</span>
+                            <span class="work-type">Visual Design</span>
                         </div>
                     </div>
                     <div class="work-content">
                         <h3 class="work-title">CarePac Design Solutions</h3>
-                        <p class="work-description">Freelance packaging design work creating innovative, functional packaging solutions for various product lines.</p>
+                        <p class="work-description">Redesigned key product pages transforming text-heavy layouts into visually compelling experiences using high-quality product mockups and visual storytelling.</p>
                         <div class="work-tags">
-                            <span class="tag">Packaging Design</span>
-                            <span class="tag">Product Design</span>
-                            <span class="tag">Freelance</span>
+                            <span class="tag">Visual Design</span>
+                            <span class="tag">Product Pages</span>
+                            <span class="tag">Adobe XD</span>
                         </div>
                         <a href="case-study-carepac.html" class="work-link">View Case Study →</a>
                     </div>
@@ -117,20 +117,20 @@
 
                 <article class="work-card fade-in-up delay-500" data-category="web-design">
                     <div class="work-image">
-                        <div class="image-placeholder" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);"></div>
+                        <img src="Growth_Ladder_Pages.jpg" alt="Growth Ladder Group website showing professional business consulting design" class="work-project-image">
                         <div class="work-overlay">
-                            <span class="work-type">Drupal Development</span>
+                            <span class="work-type">Wix Development</span>
                         </div>
                     </div>
                     <div class="work-content">
-                        <h3 class="work-title">Tulane Energy Law Center</h3>
-                        <p class="work-description">Full-stack Drupal development with custom design implementation for academic institution.</p>
+                        <h3 class="work-title">Growth Ladder Group</h3>
+                        <p class="work-description">Professional business consulting platform built on Wix with integrated payment plan functionality for coaching programs and modern user-friendly design.</p>
                         <div class="work-tags">
-                            <span class="tag">UX Design</span>
-                            <span class="tag">Drupal</span>
-                            <span class="tag">Development</span>
+                            <span class="tag">Wix Platform</span>
+                            <span class="tag">Business Strategy</span>
+                            <span class="tag">Payment Integration</span>
                         </div>
-                        <a href="case-study-tulane.html" class="work-link">View Case Study →</a>
+                        <a href="case-study-growth-ladder.html" class="work-link">View Case Study →</a>
                     </div>
                 </article>
             </div>
@@ -272,10 +272,10 @@
                         <div class="footer-section">
                             <h4>Projects</h4>
                             <ul>
-                                <li><a href="case-study-red-yes.html">Red Yes Studio</a></li>
+                                <li><a href="case-study-evernet.html">EVERNET Consulting</a></li>
                                 <li><a href="case-study-carepac.html">CarePac Design</a></li>
+                                <li><a href="case-study-growth-ladder.html">Growth Ladder Group</a></li>
                                 <li><a href="case-study-tulane.html">Tulane Energy Law</a></li>
-                                <li><a href="https://meiratompkins.github.io/meira-pet-sitting/" target="_blank">Pet Sitting Project</a></li>
                             </ul>
                         </div>
                     </div>
