Update call-to-action titles for consistency and clarity across multiple pages: removed non-breaking spaces from the "Let's Create Something Amazing Together" heading. Added new project entries for Red Yes Studio and Bodyspeake, including detailed descriptions and visuals. Introduced a "Coming Soon" tag for upcoming projects, enhancing the portfolio presentation.

--- a/case-study-carepac.html
+++ b/case-study-carepac.html
@@ -306,10 +306,10 @@
                         <div class="footer-section">
                             <h4>Projects</h4>
                             <ul>
-                                <li><a href="case-study-red-yes.html">Red Yes Studio</a></li>
+                                <li><a href="case-study-evernet.html">EVERNET Consulting</a></li>
                                 <li><a href="case-study-carepac.html">CarePac Design</a></li>
+                                <li><a href="case-study-growth-ladder.html">Growth Ladder Group</a></li>
                                 <li><a href="case-study-tulane.html">Tulane Energy Law</a></li>
-                                <li><a href="https://meiratompkins.github.io/meira-pet-sitting/" target="_blank">Pet Sitting Project</a></li>
                             </ul>
                         </div>
                     </div>
