--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <section class="contact-cta">
         <div class="container">
             <div class="cta-content">
-                <h2 class="cta-title fade-in-up">Let's Create Something&nbsp;Amazing&nbsp;Together</h2>
+                <h2 class="cta-title fade-in-up">Let's Create Something Amazing Together</h2>
                 <p class="cta-description fade-in-up delay-100">
                     Ready to bring your vision to life? I'd love to hear about your project and discuss how we can create an exceptional experience for your&nbsp;users.
                 </p>
