--- a/work.html
+++ b/work.html
@@ -549,7 +549,7 @@
     </section>
 
     <!-- Contact CTA -->
-    <section class="contact-cta">
+    <section id="contact-cta" class="contact-cta">
         <div class="container">
             <div class="cta-content">
                 <h2 class="cta-title fade-in-up">Let's Create Something Amazing Together</h2>
