Refactor contact page layout and styles for improved user experience: updated HTML structure to enhance clarity and engagement, replaced outdated CSS with new styles for contact methods and form sections, and removed unnecessary CSS files. Adjusted image sources and titles for consistency across the site, ensuring a cohesive design and better responsiveness.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="work-grid">
                 <article class="work-card fade-in-up delay-300" data-category="web-design">
                     <div class="work-image">
-                        <div class="image-placeholder" style="background: linear-gradient(135deg, #1e40af 0%, #3b82f6 100%);"></div>
+                        <img src="EVERNET_Pages_01.jpg" alt="EVERNET Consulting website homepage and pricing pages" class="work-project-image">
                         <div class="work-overlay">
                             <span class="work-type">WordPress Design & Development</span>
                         </div>
