Refactor contact page layout and styles for improved clarity and responsiveness: updated HTML structure to enhance the presentation of quick response information, and adjusted CSS for hero section font sizes and minimum height, ensuring a more cohesive design across the site.

--- a/contact.html
+++ b/contact.html
@@ -111,15 +111,13 @@
                                     <p>Your vision, my expertise - we build something amazing together</p>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    
-                    <div class="response-time fade-in-up delay-400">
-                        <div class="response-info">
-                            <div class="response-icon">⏱️</div>
-                            <div class="response-content">
-                                <h4>Quick Response</h4>
-                                <p>I typically respond to inquiries within 24 hours</p>
+                            
+                            <div class="benefit-item">
+                                <div class="benefit-icon">⏱️</div>
+                                <div class="benefit-content">
+                                    <h4>Quick Response</h4>
+                                    <p>I typically respond to inquiries within 24 hours</p>
+                                </div>
                             </div>
                         </div>
                     </div>
