--- a/case-study-red-yes.html
+++ b/case-study-red-yes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Yes Studio Case Study - Meira Tompkins</title>
     <meta name="description" content="UX case study for Red Yes Studio - Complete brand identity and website redesign focusing on user engagement and conversion optimization.">
+    <link rel="canonical" href="https://meiratompkins.com/case-study-red-yes.html">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +15,15 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="case-study.css">
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'GA_MEASUREMENT_ID');
+    </script>
 </head>
 <body>
     <!-- Navigation -->
@@ -242,7 +252,7 @@
                 </p>
                 <div class="cta-buttons">
                     <a href="contact.html" class="btn btn-primary">Start a Project</a>
-                    <a href="mailto:hello@meiratompkins.com" class="btn btn-secondary">Send Email</a>
+                    <a href="mailto:contact@meiratompkins.com" class="btn btn-secondary">Send Email</a>
                 </div>
             </div>
         </div>
@@ -266,7 +276,7 @@
                                     <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
                                 </svg>
                             </a>
-                            <a href="mailto:hello@meiratompkins.com" class="social-link" aria-label="Email">
+                            <a href="mailto:contact@meiratompkins.com" class="social-link" aria-label="Email">
                                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M0 3v18h24V3H0zm21.518 2L12 12.713 2.482 5h19.036zM2 19V7.183l10 8.104 10-8.104V19H2z"/>
                                 </svg>
@@ -312,7 +322,7 @@
                 <!-- Footer Bottom -->
                 <div class="footer-bottom">
                     <div class="footer-bottom-content">
-                        <p>&copy; 2024 Meira Tompkins. All rights reserved.</p>
+                        <p>&copy; 2025 Meira Tompkins. All rights reserved.</p>
                         <p>Inspired by beautiful design and great UX everywhere ✨</p>
                     </div>
                 </div>
