--- a/work.html
+++ b/work.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Work - Meira Tompkins Portfolio</title>
     <meta name="description" content="View Meira Tompkins' UX design and development portfolio featuring case studies in web design, packaging design, and user experience optimization.">
+    <link rel="canonical" href="https://meiratompkins.com/work.html">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +15,15 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="work.css">
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'GA_MEASUREMENT_ID');
+    </script>
 </head>
 <body>
     <!-- Navigation -->
@@ -236,13 +246,13 @@
                 <!-- EVERNET -->
                 <article class="portfolio-item" data-category="web-design development">
                     <div class="portfolio-image">
-                        <div class="image-placeholder" style="background: linear-gradient(135deg, #1e40af 0%, #3b82f6 100%);"></div>
+                        <img src="EVERNET_Pages_01.jpg" alt="EVERNET Consulting website showing IT and marketing services design" class="portfolio-project-image">
                         <div class="portfolio-overlay">
                             <div class="overlay-content">
                                 <span class="project-type">WordPress Design & Development</span>
                                 <h3 class="project-title">EVERNET Consulting</h3>
                                 <p class="project-summary">IT & Marketing Services website with home and pricing pages</p>
-                                <span class="coming-soon-tag">Coming Soon</span>
+                                <a href="case-study-evernet.html" class="project-link">View Case Study</a>
                             </div>
                         </div>
                     </div>
@@ -558,7 +568,7 @@
                 </p>
                 <div class="cta-buttons">
                     <a href="contact.html" class="btn btn-primary fade-in-up delay-200">Start a Project</a>
-                    <a href="mailto:hello@meiratompkins.com" class="btn btn-secondary fade-in-up delay-300">Send Email</a>
+                    <a href="mailto:contact@meiratompkins.com" class="btn btn-secondary fade-in-up delay-300">Send Email</a>
                 </div>
             </div>
         </div>
@@ -582,7 +592,7 @@
                                     <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
                                 </svg>
                             </a>
-                            <a href="mailto:hello@meiratompkins.com" class="social-link" aria-label="Email">
+                            <a href="mailto:contact@meiratompkins.com" class="social-link" aria-label="Email">
                                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M0 3v18h24V3H0zm21.518 2L12 12.713 2.482 5h19.036zM2 19V7.183l10 8.104 10-8.104V19H2z"/>
                                 </svg>
@@ -619,7 +629,7 @@
                                 <li><a href="case-study-evernet.html">EVERNET</a></li>
                                 <li><a href="case-study-carepac.html">CarePac Design</a></li>
                                 <li><a href="case-study-growth-ladder.html">Growth Ladder Group</a></li>
-                                <li><a href="case-study-tulane.html">Tulane Energy Law</a></li>
+                                <li><a href="case-study-red-yes.html">Red Yes Studio</a></li>
                             </ul>
                         </div>
                     </div>
@@ -628,7 +638,7 @@
                 <!-- Footer Bottom -->
                 <div class="footer-bottom">
                     <div class="footer-bottom-content">
-                        <p>&copy; 2024 Meira Tompkins. All rights reserved.</p>
+                        <p>&copy; 2025 Meira Tompkins. All rights reserved.</p>
                         <p>Inspired by beautiful design and great UX everywhere ✨</p>
                     </div>
                 </div>
