--- a/about.html
+++ b/about.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Learn about Meira Tompkins' journey as a Web & UX Designer, her design process, and passion for creating beautiful, functional digital experiences for nonprofits, small businesses, artists, and changemakers.">
     <link rel="canonical" href="https://meiratompkins.com/about.html">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
+    <link rel="apple-touch-icon" href="favicon.svg">
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
