--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Get in touch with Meira Tompkins for web design, UX design, and digital strategy projects. Let's create something amazing together.">
     <link rel="canonical" href="https://meiratompkins.com/contact.html">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
+    <link rel="apple-touch-icon" href="favicon.svg">
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
