--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <meta name="theme-color" content="#805ad5">
     <link rel="canonical" href="https://meiratompkins.com/">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
+    <link rel="apple-touch-icon" href="favicon.svg">
+    
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
