--- a/services.html
+++ b/services.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Professional web design, graphic design, logo design, and social media packages. Transparent pricing for freelance and agency projects with Meira Tompkins.">
     <link rel="canonical" href="https://meiratompkins.com/services.html">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
+    <link rel="apple-touch-icon" href="favicon.svg">
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
