--- a/work.html
+++ b/work.html
@@ -7,6 +7,12 @@
     <meta name="description" content="View Meira Tompkins' UX design and development portfolio featuring case studies in web design, packaging design, and user experience optimization.">
     <link rel="canonical" href="https://meiratompkins.com/work.html">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
+    <link rel="apple-touch-icon" href="favicon.svg">
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
