Refactor services and contact pages for improved clarity and pricing structure: updated email display for better user interaction, adjusted service package titles and pricing, and enhanced CSS styles for layout consistency and readability.

--- a/contact.html
+++ b/contact.html
@@ -107,8 +107,7 @@
                         <div class="method-icon">📧</div>
                         <div class="method-content">
                             <h3>Email</h3>
-                            <p>contact@meiratompkins.com</p>
-                            <a href="mailto:contact@meiratompkins.com" class="method-link">Send Email</a>
+                            <a href="mailto:contact@meiratompkins.com" class="method-link">contact@meiratompkins.com</a>
                         </div>
                     </div>
                 </div>
